# fastapi-production-app

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  alembic.ini  deploy.sh  docker-compose.yml  heroku.yml  monitoring.json  pyproject.toml  railway.env  railway.toml  requirements.in  requirements.txt  setup-deployment.sh  setup.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  database.py
app/models/: user.py
app/schemas/: user.py
app/services/: auth_service.py  user_service.py
deployment/: kubernetes.yaml
docs/: deployment.md
scripts/: ci_validation.sh  validate_dependencies.py
tests/: conftest.py  test_main.py  test_users.py
