[project]
name = "fastapi-production-app"
version = "0.1.0"
description = "A production-ready FastAPI application"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.1",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "argon2-cffi>=25.1.0",
    "aiosqlite>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0"
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.25.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
app = "app.main:app"

[tool.uv.sources]
fastapi = { git = "https://github.com/tiangolo/fastapi" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"